--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         
         <!-- TODO: Add the URL to your own tomcat server. Used to deploy your WAR-file -->
-        <remote.server>http://157.230.21.103/manager/text</remote.server>
+        <remote.server>https://frederikkesimone.dk/manager/text</remote.server>
         
     </properties>
     
